...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lhI-7r-pTN">
                                <rect key="frame" x="26" y="269" width="268" height="30"/>
                                <color key="backgroundColor" red="0.62261698454617576" green="0.69465613844534457" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="yuo-FS-9mi"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="135" y="329" width="50" height="30"/>
                                <color key="backgroundColor" red="0.18487809657346457" green="0.26764865251175779" blue="0.56241819371727741" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="XJl-9K-FWm"/>
                                    <constraint firstAttribute="height" constant="30" id="mJd-fp-DjF"/>
                                </constraints>
                                <state key="normal" title="TAP">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="tapAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7Ii-KU-WkR"/>
                                </connections>
                            </button>
...
